# spatialvault

./: .ca-certificates.crt  .dockerignore  .gitignore  Cargo.toml  DOCKER.md  Dockerfile
.github/: copilot-instructions.md
.github/workflows/: ci.yml
migrations/: 001_initial.sql
src/: config.rs  error.rs  lib.rs  main.rs  openapi.rs
src/api/: common.rs  conformance.rs  landing.rs  mod.rs
src/api/collections/: handlers.rs  mod.rs  schemas.rs  sharing.rs
src/api/coverages/: handlers.rs  mod.rs  range_subset.rs
src/api/features/: crs.rs  handlers.rs  mod.rs  query.rs
src/api/processes/: handlers.rs  import_pointcloud.rs  import_raster.rs  mod.rs
src/api/stac/: catalog.rs  collection.rs  item.rs  mod.rs
src/api/tiles/: handlers.rs  mod.rs  raster.rs  vector.rs
src/auth/: middleware.rs  mod.rs  oidc.rs  role_manager.rs
src/db/: models.rs  pool.rs
src/processing/: cog.rs  copc.rs  mod.rs  worker.rs
src/services/: collection_service.rs  coverage_service.rs  feature_service.rs  item_service.rs  mod.rs  process_service.rs  stac_service.rs  tile_service.rs
src/storage/: s3.rs
tests/: integration_tests.rs  ogc_tests.rs
tests/common/: mod.rs
tests/integration/: auth_tests.rs  collection_tests.rs  mod.rs  redirect_tests.rs  sharing_tests.rs
tests/ogc_abstract_tests/: coverages_core.rs  features_core.rs  features_crs.rs  features_part4.rs  features_queryables.rs  mod.rs  processes_core.rs  stac_transaction.rs  tiles_core.rs
